# disciple-sample-code

member-sso-provider/: Gemfile  boot.rb  config.ru
member-sso-provider/lib/: member_sso.rb
member-sso-provider/lib/member_sso/: api.rb
symmetric-encryption/: .rubocop.yml  README.md
symmetric-encryption/js/: README.md  decrypt.js  encrypt.js
symmetric-encryption/php/: README.md  decrypt.php  encrypt.php
symmetric-encryption/python/: README.md  decrypt.py  encrypt.py  pyproject.toml
symmetric-encryption/ruby/: Gemfile  README.md  decrypt.rb  encrypt.rb
symmetric-encryption/spec/: php_spec.rb  ruby_spec.rb  shared.rb  spec_helper.rb
